# Gentrys-Quest-Python

./: create_exe.bat  main.py  pyproject.toml  requirements.txt
game/: Changelog.py  Game.py  GameData.py  main.py
game/Collection/: ArtifactList.py  CharacterList.py  Inventory.py  ItemList.py  RangeGroup.py
game/Collection/ArtifactList/: ArtifactList.py
game/Collection/CharacterList/: CharacterList.py
game/Collection/Handlers/: ArtifactObjectHandler.py  BuffArrayHandler.py  ExperienceObjectHandler.py
game/Collection/Inventory/: ArtifactList.py  CharacterList.py  Inventory.py  WeaponList.py
game/Collection/WeaponList/: WeaponList.py
game/Config/: ClassSetting.py  ListSetting.py  NumberSetting.py  Setting.py  SettingManager.py  StringSetting.py  ToggleSetting.py
game/Content/: ArtifactContentManager.py  CharacterContentManager.py  ContentManager.py  LocationContentManager.py  SettingContentManager.py  hook-content.py
game/Content/Artifacts/: AlecFerchen.py  BraydenMesserschmidt.py  BrodyKrysa.py  BryceAnderson.py  CalebJalan.py  CarterBallard.py  ConnorFogarty.py  DanMesserschmidt.py  (+16 more)
game/Editor/: EditorInterface.py  TextAnimationEditor.py
game/Entity/: Entity.py  StarRating.py  Stats.py
game/Gacha/: Gacha.py  GachaEvent.py
game/Graphics/: Status.py  Text.py
game/IO/: Input.py  Window.py
game/Interface/: Interface.py  InterfaceContent.py  InterfaceOption.py
game/Location/: Location.py
game/Online/: Account.py  Server.py  User.py
game/Random/: Functions.py  RandomStringCreator.py
game/Story/: Story.py
game/testing/: TestingHandler.py
(+255 files in other folders)
