[tool.poetry]
name = "gentrys-quest-python"
version = "0.1.0"
description = ""
authors = ["GDcheerios", "CarterBallard1"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
pypresence = "^4.2.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
